# sstu

./: .gitignore
Semester №3/max/discrete_math/: 3.html
Semester №3/me/databases/: TODO
Semester №4/2d/Brand Book/: print_brand_book.sh  print_visiting_card.sh
Semester №4/3d/: Rotunda.blend
Semester №4/brovko/1/: Lab_1.csproj  Lab_1.sln  Makefile  Program.cs  StudentEntryForm.cs  Отчет по лабораторной работе №1.sla
Semester №4/brovko/2/: ImageForm.Designer.cs  ImageForm.cs  ImageForm.resx  Lab_2.csproj  Lab_2.sln  MainForm.Designer.cs  MainForm.cs  Makefile  Program.cs  (+1 more)
Semester №4/catstail/image_viewer/: CMakeLists.txt  README.txt
Semester №4/catstail/image_viewer/include/client/: graphics.h  input.h
Semester №4/catstail/image_viewer/include/common/: min.h  network.h  port.h
Semester №4/catstail/image_viewer/include/server/: files.h
Semester №4/catstail/image_viewer/src/client/: client.c  graphics.c  input.c
Semester №4/catstail/image_viewer/src/common/: network.c
Semester №4/catstail/image_viewer/src/server/: files.c  server.c
Semester №4/comparch/: Домашнее задание №1 − «Двоичная арифметика».doc  Домашнее задание №2 — «Схема подсчета единиц в 8-разрядном коде на базе сдвигового регистра и сумматора».lsc
Semester №5/databases/: Lab 1.sql  Lab 2.sql  Lab 3.sql
Semester №5/expert_systems/: Makefile  Граф.dot
Semester №7/computer-security/: package.json
Semester №7/os/: Makefile  gost.cls
Semester №7/thesis/: Makefile  bibliography.bib  index.tex
max/discrete_math/: 2.html  2.js
max/web/2/: 2.1.js  (+1 more)
me/discrete_math/: 1.js  2.js  3.js
(+392 files in other folders)
